add user me endpoint
